--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,6 +14,13 @@
         android:text="Files" />
 
     <Button
+        android:id="@+id/btn_sharedpref"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:text="Shared Pref" />
+
+    <Button
         android:id="@+id/database_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
